[package]
name = "bls-attestation-broker"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Multi-signer attestation broker using BLS12-381 aggregate signatures. N attestor signatures collapse into one 96-byte aggregate signature verifiable in two pairings."
license = "AGPL-3.0"
repository = "https://github.com/mizcausevic-dev/bls-attestation-broker"
homepage = "https://github.com/mizcausevic-dev/bls-attestation-broker"
readme = "README.md"
keywords = ["bls", "bls12-381", "aggregate-signature", "attestation", "crypto"]
categories = ["cryptography", "no-std"]

[dependencies]
bls12_381 = "0.8"
group = "0.13"
rand_core = "0.6"
sha2 = "0.10"

[dev-dependencies]
rand = "0.8"
hex = "0.4"

[[example]]
name = "demo"
path = "examples/demo.rs"

[profile.release]
opt-level = 3
lto = true
